align text center and change font

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,8 @@ body {
   background-image: url("../images/turgoise.jpg");
   background-repeat: repeat;
 }
+p,
+h1 {
+  text-align: center;
+  font-family: "Times New Roman", Times, serif;
+}
