make onclick function. link each gem button, enabling them to add their worth to the user score

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,8 @@ body {
   background-repeat: repeat;
 }
 p,
-h1 {
+h1,
+div {
   text-align: center;
   font-family: "Times New Roman", Times, serif;
 }
